<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentHome">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@id/rel"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7sp"
                android:fontFamily="@font/rsemibold"
                android:text="@string/homeU"
                android:textSize="38sp" />

            <TextView
                android:id="@+id/subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/rsemibold"
                android:text="@string/subtitle1"
                android:textColor="#116ED8"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/numUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle1"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="11sp"
                android:text="# of users within # miles: "
                android:textSize="22sp" />


            <!--<TextView
                android:id="@+id/noResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35sp"
                android:layout_below="@id/numUsers"
                android:text="No results"
                android:textAlignment="center"
                android:textSize="25sp" />

            <HorizontalScrollView
                android:id="@+id/bigBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/numUsers"
                android:layout_marginLeft="3sp"
                android:layout_marginTop="19sp"
                android:layout_marginRight="3sp"
                android:background="@drawable/latest">

                    <LinearLayout
                        android:id="@+id/latest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2sp"
                        android:layout_marginTop="4sp"
                        android:layout_marginRight="3sp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/box1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="45">

                            <TextView
                                android:id="@+id/t1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15sp"
                                android:fontFamily="@font/remedium"
                                android:text="Latest Donors"
                                android:textColor="#438BDA"
                                android:textSize="23sp" />

                            <RelativeLayout
                                android:id="@+id/bar1"
                                android:layout_width="match_parent"
                                android:layout_height="3sp"
                                android:layout_below="@+id/t1"
                                android:background="#006CDD"></RelativeLayout>

                            <ListView
                                android:id="@+id/donorsList"
                                android:layout_width="match_parent"
                                android:layout_height="80sp"
                                android:layout_below="@id/bar1"
                                android:background="#f00"></ListView>


                        </RelativeLayout>


                        <RelativeLayout
                            android:id="@+id/box2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="50">

                            <TextView
                                android:id="@+id/t2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25sp"
                                android:layout_marginRight="15sp"
                                android:fontFamily="@font/remedium"
                                android:text="Latest Recipients"
                                android:textColor="#438BDA"
                                android:textSize="23sp" />

                            <RelativeLayout
                                android:id="@+id/bar2"
                                android:layout_width="match_parent"
                                android:layout_height="3sp"
                                android:layout_below="@+id/t2"
                                android:background="#006CDD"></RelativeLayout>

                            <ListView
                                android:id="@+id/receiversList"
                                android:layout_width="match_parent"
                                android:layout_height="80sp"
                                android:layout_below="@id/bar2"
                                android:background="#f00"></ListView>


                        </RelativeLayout>

                    </LinearLayout>
            </HorizontalScrollView>-->

            <TextView
                android:id="@+id/leaderboardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/numUsers"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20sp"
                android:text="@string/leaderboardtitle"
                android:textColor="#438BDA"
                android:textSize="26sp" />

            <ImageView
                android:id="@+id/help"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_below="@id/leaderboardTitle"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="7sp"
                android:layout_marginTop="6sp"
                android:src="@drawable/helpicon" />

            <TextView
                android:id="@+id/of"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/leaderboardTitle"
                android:layout_marginLeft="2sp"
                android:layout_marginTop="7sp"
                android:layout_toRightOf="@+id/help"
                android:text="Sort by # of:"
                android:textColor="#3782D8"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/donationsT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/leaderboardTitle"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="7sp"
                android:layout_toRightOf="@id/of"
                android:text="Donations"
                android:textSize="20sp" />


            <Switch
                android:id="@+id/show"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_below="@id/leaderboardTitle"
                android:layout_marginLeft="3sp"
                android:layout_marginTop="8sp"
                android:layout_toRightOf="@+id/donationsT"
                android:switchMinWidth="80sp"
                android:text=""
                android:textOff="# of Donation Points"
                android:textOn="# of Donations"
                android:theme="@style/SCBSwitch2" />

            <TextView
                android:id="@+id/noResults2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/show"
                android:layout_marginTop="5sp"
                android:text="No results"
                android:textAlignment="center"
                android:textSize="25sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_below="@id/show"
                android:layout_marginTop="5sp"
                android:layout_marginLeft="1sp"
                android:layout_marginRight="1sp"
                android:background="@drawable/latest"
                android:id="@+id/container"
                android:layout_height="wrap_content">
                <ListView
                    android:id="@+id/leaderboard"
                    android:layout_width="match_parent"
                    android:padding="4sp"
                    android:layout_height="wrap_content"
                    android:divider="#3773B4"
                    android:dividerHeight="4sp"
                   ></ListView>
            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/bar"
                android:layout_width="match_parent"
                android:layout_height="12sp"
                android:layout_below="@+id/container"
                android:layout_marginTop="12sp"
                android:background="#3773B4"></RelativeLayout>

            <TextView
                android:id="@+id/subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bar"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="13sp"
                android:fontFamily="@font/rsemibold"
                android:text="@string/subtitle2"
                android:textColor="#006CDD"
                android:textSize="28sp" />

            <Button
                android:id="@+id/listButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtitle2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13sp"
                android:background="@drawable/b1"
                android:paddingLeft="20sp"
                android:paddingTop="2sp"
                android:paddingRight="20sp"
                android:paddingBottom="2sp"
                android:text="View a list of locations"
                android:textAllCaps="false"
                android:textSize="22sp" />


            <Button
                android:id="@+id/mapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/listButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7sp"
                android:background="@drawable/b2"
                android:paddingLeft="15sp"
                android:paddingTop="2sp"
                android:paddingRight="15sp"
                android:paddingBottom="2sp"
                android:text="View a map of locations"
                android:textAllCaps="false"
                android:textSize="22sp" />

            <Button
                android:id="@+id/donationsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mapButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7sp"
                android:background="@drawable/b3"
                android:paddingLeft="20sp"
                android:paddingTop="2sp"
                android:paddingRight="20sp"
                android:paddingBottom="2sp"
                android:text=""
                android:textAllCaps="false"
                android:textSize="22sp" />

            <Button
                android:id="@+id/settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/donationsButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/b4"
                android:paddingLeft="20sp"
                android:paddingTop="2sp"
                android:paddingRight="20sp"
                android:paddingBottom="2sp"
                android:text="Edit Your Account Info"
                android:textAllCaps="false"
                android:textSize="22sp" />


        </RelativeLayout>

    </ScrollView>
</FrameLayout>